--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,4 @@
 <div class="cocktail">
   <p><%= @cocktail.name %></p>
+  <p><%= link_to 'Create new Dose', new_cocktail_dose_path(@cocktail) %></p>
 </div>
