--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,6 +2,7 @@
   <% @cocktails.each do |cocktail| %>
     <div class="cocktail">
       <p><%= cocktail.name %></p>
+      <p><%= link_to 'See more', cocktail_path(cocktail) %></p>
     </div>
   <% end %>
 </div>
