--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,8 @@
 <div class="cocktail">
   <p><%= @cocktail.name %></p>
-  <p><%= link_to 'Create new Dose', new_cocktail_dose_path(@cocktail) %></p>
+  <p>Ingredients:</p>
+  <% @cocktail.doses.each do |dose| %>
+    <p><%= dose.ingredient.name %> - <%= link_to 'Destroy', dose_path(dose), method: :delete %></p>
+  <% end %>
 </div>
+<p><%= link_to 'Create new Dose', new_cocktail_dose_path(@cocktail) %></p>
