--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,8 +1,11 @@
 <div class="cocktail">
+  <%= cl_image_tag @cocktail.photo.key if @cocktail.photo.attached? %>
   <p><%= @cocktail.name %></p>
   <p>Ingredients:</p>
   <% @cocktail.doses.each do |dose| %>
     <p><%= dose.ingredient.name %> - <%= link_to 'Destroy', dose_path(dose), method: :delete %></p>
   <% end %>
 </div>
+<p><%= link_to "Edit Cocktail", edit_cocktail_path(@cocktail) %></p>
 <p><%= link_to 'Create new Dose', new_cocktail_dose_path(@cocktail) %></p>
+<p><%= link_to 'Back to Cocktails', root_path %></p>
