--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,11 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "bartenders";
+@import "sidebar";
+@import "drinks";
+@import "features";
+@import "footer";
+@import "galery";
+@import "story";
+@import "header";
