--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,19 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="body">
+    <div class="sidebar">
+      SIDEBAR
+    </div>
+
+    <header class="header">
+      HEADER
+    </header>
+
     <%= yield %>
+
+    <div class="footer">
+      FOOTER
+    </div>
   </body>
 </html>
